--- a/css/main.css
+++ b/css/main.css
@@ -96,11 +96,14 @@ textarea {
    ========================================================================== */
 
 /* PAGE D'ACCUEIL */
-
+body
+{
+    background-color: #ECECE0;
+}
 header
 {
     height: 100vh;
-    background-color: green;
+    background-color: #E6E952;
     overflow: hidden;
     display: flex;
     flex-direction: column;
@@ -114,8 +117,9 @@ header article
     width: 80%;
     margin: auto;
     background-color: rgba(255, 255, 255, .7);
-    margin-top: 20vh;
+    margin-top: 15vh;
     color: white;
+    padding: 2em;
 }
 
 header i
@@ -129,7 +133,6 @@ header i
 {
     width: 95%;
     margin: auto;
-    margin-top: 1em;
     padding-top: 1em;
 }
 
@@ -140,27 +143,52 @@ img
 
 .main section
 {
-    width: 95%;
-    margin: auto;
+    width: 100%;
+/*    margin: auto;
+*/    padding-bottom: 2em;
 }
 .main section:nth-child(1)
 {
-    background-color: red;
+    background-color: #9FC3D3;
 }
 
 .main section:nth-child(2)
 {
-    background-color: blue;
+    background-color: #F6EFA7;
 }
 
 .main section:nth-child(3)
 {
-    background-color: yellow;
+    background-color: #90979F;
 }
 
+.petit
+{
+    width: 90%;
+    margin: auto;
+}
 .petit a
 {
+    border: 1px solid black;
+}
+
+
+form
+{
+    margin-top: 2em;
+}
+
+
+footer
+{
     text-align: center;
+    font-size: 2em;
+}
+
+
+.tablette
+{
+    display: none;
 }
 
 
@@ -172,6 +200,75 @@ img
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (min-width: 768px) {
+.tablette
+{
+    display: block;
+}
+.phone
+{
+    display: none;
+}
+
+.grand
+{
+    display: flex;
+}
+
+.grand figure
+{
+    padding: 0;
+    width: 100%;
+}
+
+.main section
+{
+    padding-bottom: 0;
+/*    border-top: 1px solid black;
+    border-bottom: 1px solid black;*/
+}
+
+.main section figure
+{
+    width: 90%;
+}
+
+.main section:nth-child(2)
+{
+    text-align: right;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+}
 
 
 
