ajout des pages 'en savoir plus'

--- a/css/main.css
+++ b/css/main.css
@@ -98,12 +98,13 @@ textarea {
 /* PAGE D'ACCUEIL */
 body
 {
-    background-color: #ECECE0;
+    background-color: #F7F7EF;
 }
+
 header
 {
     height: 100vh;
-    background-color: #E6E952;
+    background-color: #CBDAE3;
     overflow: hidden;
     display: flex;
     flex-direction: column;
@@ -114,21 +115,31 @@ header
 header article
 {
     text-align: center;
-    width: 80%;
+    width: 60%;
     margin: auto;
-    background-color: rgba(255, 255, 255, .7);
-    margin-top: 15vh;
-    color: white;
-    padding: 2em;
+    background-color: #D9CE00/*rgba(255, 255, 255, .7)*/;
+    margin-top: 18vh;
+    color: #F7F7EF;
+    padding: 3em;
+}
+
+header article h3
+{
+    font-family: 'Arvo', serif;
+}
+
+header article h1
+{
+    font-family: 'Patua One', cursive;
+    font-size: 70px;
 }
 
 header i
 {
-    color: white;
+    color: #F7F7EF;
 }
 
 /* Articles sur les technologies */
-
 .grand figure
 {
     width: 95%;
@@ -143,37 +154,45 @@ img
 
 .main section
 {
-    width: 100%;
-/*    margin: auto;
-*/    padding-bottom: 2em;
+    width: 95%;
+    margin: auto;
+    padding-bottom: 2em;
+    margin-top: 1em;
 }
+
 .main section:nth-child(1)
 {
-    background-color: #9FC3D3;
+    background-color: #69A3A7;
 }
 
 .main section:nth-child(2)
 {
-    background-color: #F6EFA7;
+    background-color: #016F7B;
 }
 
 .main section:nth-child(3)
 {
-    background-color: #90979F;
+    background-color: #22387B;
 }
 
 .petit
 {
     width: 90%;
     margin: auto;
+    margin-top: 1em;
+    font-family: 'Arvo', serif;
 }
+
 .petit a
 {
-    border: 1px solid black;
+    border: 2px solid #D48D2B;
+    color: #DCA50B;
+    padding: 7px 15px;
+    border-radius: 30px 30px;
 }
 
 
-form
+.contact
 {
     margin-top: 2em;
 }
@@ -226,6 +245,10 @@ footer
     display: none;
 }
 
+.main
+{
+    margin-top: 2em;
+}
 .grand
 {
     display: flex;
@@ -235,13 +258,6 @@ footer
 {
     padding: 0;
     width: 100%;
-}
-
-.main section
-{
-    padding-bottom: 0;
-/*    border-top: 1px solid black;
-    border-bottom: 1px solid black;*/
 }
 
 .main section figure
@@ -254,12 +270,26 @@ footer
     text-align: right;
 }
 
+.petit p, .petit h2
+{
+    width: 90%; 
+    margin: auto;
+    margin-bottom: 1em;
+}
 
+.petit a
+{
+    margin: 10px 10px;
+}
 
-
-
-
-
+.main section
+{
+    width: 90%;
+    margin: auto;
+    padding-bottom: 0;
+   /* margin-bottom: 1em;
+    margin-top: 2em;*/*/
+}
 
 
 
