--- a/css/main.css
+++ b/css/main.css
@@ -339,11 +339,15 @@ footer, footer i
 {
     color: #ADA915;
     font-size: 3em;
+    letter-spacing: 3px;
+
 }
 .suite h3
 {
     color: #D7D36C;
     line-height: 1.5em;
+    letter-spacing: 2.5px;
+
 }
 
 /* Reglage des paragraphes des articles */
@@ -368,10 +372,11 @@ footer, footer i
     margin: auto;
     text-align: center;
     margin-top: 3em;
-    background-color: #79BBBA;
     width: 90%;
     padding: .5em;
     margin-bottom: 3em;
+    background-image: linear-gradient(white, #658CAA);
+
 }
 
 .description article a
